--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,3 +14,22 @@
   background-color: #e31b23!important;
   border: 1px solid #e31b23;
 }
+
+.main-container{
+  border-radius: 0;
+  position: fixed;
+  z-index: 1000;
+  top: 0px;
+  left: 235px;
+  width: 900px;
+  height: 100vh;
+  margin-top:100px;
+  margin-left: 100px;
+  margin-bottom: 48px;
+  border: none;
+  border-radius: 0;
+  overflow-y: auto;
+  bottom: 0;
+  overflow-x: hidden;
+  padding-bottom: 40px;
+}
