--- a/src/app/dashboard/sidebar/sidebar.component.scss
+++ b/src/app/dashboard/sidebar/sidebar.component.scss
@@ -27,109 +27,28 @@ $topnav-background-color: #222;
         a.list-group-item {
             background: $topnav-background-color;
             border: 0;
+            width: 100px;
             border-radius: 0;
             color: #999;
+            font-size: 25px;
+            text-decoration: none;
+        }
+        a.list-group-item-menu {
+            background: $topnav-background-color;
+            border: 0;
+            width: 100px;
+            border-radius: 0;
+            color: #999;
+            font-size: 18px;
             text-decoration: none;
             .fa {
                 margin-right: 10px;
-            }
-        }
-        a:hover {
-            background: darken($topnav-background-color, 5%);
-            color: #fff;
-        }
-        a.router-link-active {
-            background: darken($topnav-background-color, 5%);
-            color: #fff;
-        }
-        .header-fields {
-            padding-top: 10px;
-
-            > .list-group-item:first-child {
-                border-top: 1px solid rgba(255, 255, 255, 0.2);
-            }
-        }
-    }
-    .sidebar-dropdown {
-        *:focus {
-            border-radius: none;
-            border: none;
-        }
-        .panel-title {
-            font-size: 1rem;
-            height: 50px;
-            margin-bottom: 0;
-            a {
-                color: #999;
-                text-decoration: none;
-                font-weight: 400;
-                background: $topnav-background-color;
-                span {
-                    position: relative;
-                    display: block;
-                    padding: 0.75rem 1.5rem;
-                    padding-top: 1rem;
-                }
-            }
-            a:hover,
-            a:focus {
-                color: #fff;
-                outline: none;
-                outline-offset: -2px;
-            }
-        }
-        .panel-title:hover {
-            background: darken($topnav-background-color, 5%);
-        }
-        .panel-collapse {
-            border-radious: 0;
-            border: none;
-            .panel-body {
-                .list-group-item {
-                    border-radius: 0;
-                    background-color: $topnav-background-color;
-                    border: 0 solid transparent;
-                    a {
-                        color: #999;
-                    }
-                    a:hover {
-                        color: #fff;
-                    }
-                }
-                .list-group-item:hover {
-                    background: darken($topnav-background-color, 5%);
-                }
+                margin-left: 20px;
             }
         }
     }
 }
 
-.nested-menu {
-    .list-group-item {
-        cursor: pointer;
-    }
-    .nested {
-        list-style-type: none;
-    }
-    ul.submenu {
-        display: none;
-        height: 0;
-    }
-    & .expand {
-        ul.submenu {
-            display: block;
-            list-style-type: none;
-            height: auto;
-            li {
-                a {
-                    color: #fff;
-                    padding: 10px;
-                    display: block;
-                }
-            }
-        }
-    }
-}
 @media screen and (max-width: 992px) {
     .sidebar {
         top: 15px;
@@ -161,25 +80,3 @@ $topnav-background-color: #222;
     -webkit-box-shadow: inset 0 0 3px rgba(255, 255, 255, 1);
 }
 
-.toggle-button {
-    position: fixed;
-    width: 236px;
-    cursor: pointer;
-    padding: 12px;
-    bottom: 0;
-    color: #999;
-    background: #212529;
-    i {
-        font-size: 23px;
-    }
-    &:hover {
-        background: darken($topnav-background-color, 5%);
-        color: #fff;
-    }
-    border-top: 1px solid #999;
-    -webkit-transition: all 0.2s ease-in-out;
-    -moz-transition: all 0.2s ease-in-out;
-    -ms-transition: all 0.2s ease-in-out;
-    -o-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
-}
