--- a/src/app/components/report/report.component.html
+++ b/src/app/components/report/report.component.html
@@ -1,13 +1,13 @@
 <section class="section-header">
     <div class="row">
         <div class="col-md-6">
-            <h4> Clientes</h4>
+            <h4> Reporte de Productos</h4>
         </div>
         <div class="col-md-6">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb float-md-right" style="background: transparent;">
             <li class="breadcrumb-item">Inicio</li>
-            <li class="breadcrumb-item active">Clientes</li>
+            <li class="breadcrumb-item active">Reporte</li>
             </ol>
         </nav>      
         </div>
@@ -16,20 +16,12 @@
 
 <section class="section-content">
     <div class="card">
-        <div class="card-header">
-            <button pButton type="button" label="Nuevo Cliente" class="btn" routerLink="/NewAccountComponent"></button>    
-        </div>
         <div class="card-body">
             <p-table #table [tableStyle]="{'table-layout':'auto'}" [resizableColumns]="true" [value]="filteredList" [columns]="cols" [paginator]="true" [rows]="5">
                 <ng-template pTemplate="caption">
                     <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
-                    <input type="text"  pInputText size="50" maxlength="30" placeholder="Buscar" style="width:auto">
-                    <p style="position:absolute; top:10px; right: 50px; color:#333; font-weight: 500">Ayuda</p><i style="background-color:#0470B0!important;" class="fas fa-info help-tip">
-                    <p>
-                        <i class="fas fa-pencil-alt"></i> &nbsp;&nbsp;Editar Cliente
-                        <i class="fas fa-ban"></i> &nbsp;&nbsp;Eliminar Cliente
-                    </p>
-                    </i>
+                    <input type="text"  pInputText size="50" maxlength="30" placeholder="Buscar" [(ngModel)]="filterText" (ngModelChange)="filter()" style="width:auto">
+                    
                 </ng-template> 
                 <ng-template pTemplate="header" let-columns>
                     <tr>
@@ -37,7 +29,6 @@
                             {{col.header|translate}}
                             <p-sortIcon [field]="col.field"></p-sortIcon>
                         </th>
-                        <th style="word-wrap: break-word; text-align:center;width: 170px">Acciones</th>
                     </tr>
                 </ng-template> 
                 <ng-template pTemplate="body" let-rowData let-columns="columns" let-data>
@@ -47,17 +38,13 @@
                                 *ngIf="col.type === 'date'; then colDate; else colText">
                             </ng-container>
                             <ng-template #colDate>
-                                {{data[col.field]|translate}}
+                                {{data[col.field] | date:'dd/MM/yyyy hh:mm'}}
                             </ng-template>
                             <ng-template #colText>
                                 {{data[col.field]|translate}}
                             </ng-template>
                         </td>
-                        <td >
-                            <div style="display: flex; justify-content: center;"  class="mx-auto"><button pButton type="button" style="margin-right:3%;" icon="fas fa-ban" class="btn ui-button-danger btn-enable"  (click)="bindinAccion(data.id)" data-toggle="modal" data-target="#HistoricModal"></button>                        
-                            <button pButton type="button" style="margin-right:3%;" icon="fas fa-pencil-alt" class="btn ui-button-secondary btn-disable"  routerLink="/NewAccountComponent/{{data.id}}"></button>
-                            </div>
-                        </td>
+                        
                     </tr>
                 </ng-template>
             </p-table>
